<resources>
    <string name="app_name">DontGiveUp</string>
    
    <string name="text_monday_long">Monday</string>
    <string name="text_tuesday_long">Tuesday</string>
    <string name="text_wednesday_long">Wednesday</string>
    <string name="text_thursday_long">Thursday</string>
    <string name="text_friday_long">Friday</string>
    <string name="text_saturday_long">Saturday</string>
    <string name="text_sunday_long">Sunday</string>
    
    <string name="text_monday_short">M</string>
    <string name="text_tuesday_short">T</string>
    <string name="text_wednesday_short">W</string>
    <string name="text_thursday_short">T</string>
    <string name="text_friday_short">F</string>
    <string name="text_saturday_short">S</string>
    <string name="text_sunday_short">S</string>
</resources>
