<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="@dimen/days_selection_min_height"
        android:orientation="horizontal">
        
        <CheckBox
            android:id="@+id/mondayCb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_monday_short"/>
        
        <CheckBox
            android:id="@+id/tuesdayCb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_tuesday_short"/>
        
        <CheckBox
            android:id="@+id/wednesdayCb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_wednesday_short"/>
        
        <CheckBox
            android:id="@+id/thursdayCd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_thursday_short"/>
        
        <CheckBox
            android:id="@+id/fridayCb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_friday_short"/>
        
        <CheckBox
            android:id="@+id/saturdayCb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_saturday_short"/>
        
        <CheckBox
            android:id="@+id/sundayCb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_sunday_short"/>
    </LinearLayout>
    
    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>